<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_authentication"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <EditText android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/et_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="145dp"
        android:hint="@string/email" />

    <EditText android:layout_width="250dp"
        android:inputType="textPassword"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/et_email"
        android:hint="@string/password"
        android:id="@+id/et_password" />

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="20dp">
        <Button android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/authorization"
            android:layout_weight="1"
            android:id="@+id/btn_sign_in"
            android:layout_marginHorizontal="3sp"/>
        <Button android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/registration"
            android:id="@+id/btn_registration"
            android:layout_marginHorizontal="3sp"/>
    </LinearLayout>
</RelativeLayout>